[b]Version 0.5.62[/b] (not released yet):

(2007-10-15)
 * Added clean_windows.bat, which deletes the compilation files.
 * Now the settings for played files will be saved in an independent file:
   ~/.smplayer/smplayer_files.ini (or under the directory set in -ini-path).

(2007-10-14)
 * Added patch by LoRd_MuldeR for prefassociations.cpp and winfileassoc.cpp to
   make the file associations code compatible with SetFileAssoc.exe. It also
   adds an "Enqueue in SMPlayer" for the context menu. Not tested yet.
 * Disable compact mode when the video window is hidden (playing an audio
   file or using the mplayer window). I think this fixes bug #1812952.
 * New option for the config file: allow_video_movement. If true the video
   can be moved (Alt+cursors) even if not using zoom.

(2007-10-13)
 * Updated the Ukrainian translation.

(2007-10-10)
 * Updated the Slovak translation.


[b]Version 0.5.61[/b]:

(2007-10-08)
 * Updated the Polish translation.
 * Added new icon (pref_associations.png).
 * Not compiling prefassociations and winfileassoc in linux, as they won't be
   used, to save some bytes and some secs of compilation.
 * Added *.ape to the list of audio files.

(2007-10-07)
 * (Windows) Added a new section in Preferences to associate file types with
   SMPlayer. Patch by Florin Braghis (florin@libertv.ro).

(2007-10-06)
 * Updated the Polish translation.
 * Added two new options for the configuration file, in section [defaults]:
   initial_audio_track and initial_subtitle_track. When a new file is played
   the values of these options will be used to select the audio and subtitle
   tracks. The first track is 0 (not 1). If the value is wrong, the first
   track will be used. The default value for both options is 0.
   Note: the "Preferred audio and subtitles" in Preferences->General will have
   preference over these options.
 * Added "Arabic (CP1256)" to the list of encodings for subtitles.

(2007-10-05)